Chapter 10 — Listing 10.4: OrderStatus.java Demonstrates: enums as immutable singleton constants safe for concurrent access