@@ -1,69 +1,59 @@
-// Java 5+
-/**
- * Listing 10.4 — OrderStatus.java
- * Demonstrates: Enum immutability for thread-safe shared state in concurrent systems
- * Chapter 10: Concurrency Foundations and Coordination
- * Requires: Java 5+
- */
+// Java 25+
+// Feature shown: enums, final in Java 5+
 package chapter10;
 
-import java.util.Arrays;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 import java.util.logging.Logger;
 
-public class OrderStatus {
+/**
+ * Listing 10.4 — OrderStatus.java
+ * Demonstrates: enums as immutable singleton constants safe for concurrent access
+ * Chapter 10: Concurrency Foundations and Coordination
+ * Requires: Java 25+ (compiled with --enable-preview --release 21 for
+ * the void main() instance main method)
+ */
 
-    // Immutable by construction — safe to share across threads
-    enum Status {
-        CREATED, PAID, SHIPPED, DELIVERED, CANCELLED
-    }
+// Immutable by construction — safe to share across threads
+// Each constant is a singleton initialised once at class loading time
+enum OrderStatus {
+    CREATED, PAID, SHIPPED, DELIVERED, CANCELLED
+}
 
-    private static final Logger log = Logger.getLogger(OrderStatus.class.getName());
+class OrderStatusDemo {
 
-    // Volatile ensures visibility of enum reference across threads
-    static volatile Status currentStatus = Status.CREATED;
+    private static final Logger log = Logger.getLogger(
+            OrderStatusDemo.class.getName());
 
-    public static void main(String[] args) throws InterruptedException {
+    void main() throws InterruptedException {
+        // Enum constant shared freely — no synchronisation required
+        OrderStatus current = OrderStatus.CREATED;
 
         ExecutorService executor = Executors.newFixedThreadPool(4);
 
-        // Simulate workflow transitions on one thread
-        executor.submit(() -> {
-            currentStatus = Status.PAID;
-            log.info("Order transitioned to: " + currentStatus);
-            currentStatus = Status.SHIPPED;
-            log.info("Order transitioned to: " + currentStatus);
-        });
-
-        // Multiple threads safely read the shared enum value — no synchronisation needed
-        for (int i = 0; i < 6; i++) {
+        // Multiple threads reading the same enum constant safely
+        for (int i = 0; i < 8; i++) {
+            final int step = i;
             executor.submit(() -> {
-                Status status = currentStatus;
+                // Enum values are singletons — identity comparison is safe
+                OrderStatus status = step < 2 ? OrderStatus.CREATED
+                        : step < 4 ? OrderStatus.PAID
+                        : step < 6 ? OrderStatus.SHIPPED
+                        : OrderStatus.DELIVERED;
                 log.info("Thread observed status: " + status
-                        + " | isFinal=" + isFinalState(status));
+                        + " | same as CREATED: " + (status == current));
             });
         }
 
         executor.shutdown();
         executor.awaitTermination(5, TimeUnit.SECONDS);
 
-        // Enum constants are singletons — identity comparison is safe and idiomatic
-        log.info("All statuses: " + Arrays.toString(Status.values()));
-        log.info("DELIVERED is final: " + isFinalState(Status.DELIVERED));
-        log.info("PAID is final: "      + isFinalState(Status.PAID));
-
         // Output:
-        // Order transitioned to: PAID
-        // Order transitioned to: SHIPPED
-        // Thread observed status: SHIPPED | isFinal=false
-        // All statuses: [CREATED, PAID, SHIPPED, DELIVERED, CANCELLED]
-        // DELIVERED is final: true
-        // PAID is final: false
-    }
-
-    static boolean isFinalState(Status status) {
-        return status == Status.DELIVERED || status == Status.CANCELLED;
+        // Thread observed status: CREATED | same as CREATED: true
+        // Thread observed status: PAID    | same as CREATED: false
+        // Thread observed status: SHIPPED | same as CREATED: false
+        // Thread observed status: DELIVERED | same as CREATED: false
+        // (order of lines may vary; values are always consistent)
     }
 }
